Сделано изменение в футере. Введено название ЭВМ
Signed-off-by: Alex <artmotor1500@rambler.ru>

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container text-muted">
-        <span class="text-muted">Простая медицинская информационная система (ПРОМИС)</span>
+        <span class="text-muted">Электронный вассал методиста</span>
         <span class="pl-5">(c)</span>
         <a href="http://iro37.ru/xqwiki/Artel">artel</a>
         <span>, (c) И. Мартьянов</span>
