путь изменен на unoi

--- a/components/login/login.html
+++ b/components/login/login.html
@@ -12,7 +12,7 @@
                 <input type="password" name="password" id="" class="form-control" placeholder="password" aria-describedby="helpId"/>
                 <small id="helpId" class="text-muted">Введите пароль</small>
             </div>
-            <button class="btn btn-info" form="login" type="submit" formmethod="GET" formaction="/inkwi/u">Войти</button>
+            <button class="btn btn-info" form="login" type="submit" formmethod="GET" formaction="/unoi/u">Войти</button>
         </form>
     </div>
     <div class="col-sm-3"></div>
