--- a/components/header/header.html
+++ b/components/header/header.html
@@ -1,7 +1,7 @@
 <header class="container-fluid px-0">
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-light" style="background-color: #e8f0fe;">
-      <a class="navbar-brand" href="/inkwi">ЭВМ</a>
+      <a class="navbar-brand" href="/unoi">ЭВМ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
