--- a/components/main/main.html
+++ b/components/main/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content="Простая информационная система для медицинской организации реализована на технологии TRaC"/>
+    <meta name="description" content="Электронный вассал методиста" />
     <meta name="author" content=""/>
 
     <title>Электронный вассал методиста</title>
@@ -17,8 +17,8 @@
     <!-- Custom styles for this template -->
     <link href="https://bootstrap-4.ru/docs/4.0/examples/sticky-footer-navbar/sticky-footer-navbar.css" rel="stylesheet"/>
     
-    <link rel="shortcut icon" href="/static/promis/src/favicon.jpg" type="image/png"></link>
-    <link rel="icon" href="/static/promis/src/favicon.jpg" type="image/png"></link>
+    <link rel="shortcut icon" href="http://iro37.ru/res/trac-src/img/logo.jpg" type="image/jpg"></link>
+    <link rel="icon" href="http://iro37.ru/res/trac-src/img/logo.jpg" type="image/jpg"></link>
     
   </head>
   
