--- a/components/main/main.html
+++ b/components/main/main.html
@@ -22,11 +22,11 @@
     
   </head>
   
-  <body class="container-fluid px-0">
+  <body class="container-fluid">
 
     <div class = "header">{{header}}</div>
-    <div class="py-2">{{content}}</div>
-    <div>{{footer}}</div>
+    <div class="content mx-3">{{content}}</div>
+    <div class = "footer">{{footer}}</div>
 
   </body>
 
