--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,9 +1,9 @@
-<footer class="footer">
-    <div class="container text-muted">
-        <span class="text-muted">Простая медицинская информационная система (ПРОМИС)</span>
+<footer >
+    <div class="container text-muted" >
+        <span class="text-muted">Электронный вассал методиста</span>
         <span class="pl-5">(c)</span>
         <a href="http://iro37.ru/xqwiki/Artel">artel</a>
-        <span>, (c) И. Мартьянов</span>
+        <span>, (c) А.С. Калинин</span>
         <span class="pl-5">Powered by</span>
         <span class="badge badge-primary">
           <a target="_blank" href="http://iro37.ru/xqwiki/TRaC" style="color : white">TRaC</a>
