--- a/components/header/header.html
+++ b/components/header/header.html
@@ -1,13 +1,19 @@
-<header class="container-fluid px-0">
+<header class="container-fluid px-0" style="background-color: #e8f0fe;">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+   
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-light" style="background-color: #e8f0fe;">
-      <a class="navbar-brand" href="/unoi">ЭВМ</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-md navbar-light"> 
+      <div>
+        <a class="navbar-brand" href="/unoi/u">
+          <img src="http://iro37.ru/res/trac-src/xqueries/unoi/image/logoUnoi.jpg" width="180" height="100" class="d-inline-block align-top" alt=""/>
+          <img src="http://iro37.ru/res/trac-src/img/logo.jpg" width="110" height="100" class="d-inline-block align-top" alt=""/>
+        </a>
+      </div>
+
       <div class="collapse navbar-collapse" id="navbarCollapse">
           {{mainMenu}}
           {{avatar}}
       </div>
     </nav>
-  </header>
+    
+</header>
