--- a/components/content/reports/report-courses/report-courses.html
+++ b/components/content/reports/report-courses/report-courses.html
@@ -1,4 +1,4 @@
 <div class = "row">
-  <div class = 'h2 col-10 offset-md-1'>Сводные данные по количеству запланированных курсов</div>
+  <div class = 'h2 col-10 offset-md-1 text-center'>Сводные данные по количеству запланированных курсов</div>
   <div class = 'col-10 offset-md-1'>{{отчет}}</div>
 </div>
