добавлено апи со статистикой по количеству курсов и диаграмма к сводному отчету

--- a/components/content/reports/report-courses/report-courses.html
+++ b/components/content/reports/report-courses/report-courses.html
@@ -1,4 +1,11 @@
 <div class = "row">
+  
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"/>
+  <script type="text/javascript" src = "/static/tmp/unoi/unoi.monitoring.count.kafedr.js"/>
+  
   <div class = 'h2 col-10 offset-md-1 text-center'>Сводные данные по количеству запланированных курсов</div>
+  
+  <div id="piechart" style="width: 900px; height: 500px;"></div>
+  
   <div class = 'col-10 offset-md-1'>{{отчет}}</div>
 </div>
