изменен адрсе js

--- a/components/content/reports/report-courses/report-courses.html
+++ b/components/content/reports/report-courses/report-courses.html
@@ -1,7 +1,7 @@
 <div class = "row">
   
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"/>
-  <script type="text/javascript" src = "/static/tmp/unoi/unoi.monitoring.count.kafedr.js"/>
+  <script type="text/javascript" src = "/static/unoi/js/unoi.monitoring.count.kafedr.js"/>
   
   <div class = 'h2 col-10 offset-md-1 text-center'>Сводные данные по количеству запланированных курсов</div>
   
