--- a/components/content/reports/report-courses/report-courses.html
+++ b/components/content/reports/report-courses/report-courses.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src = "/static/unoi/js/unoi.monitoring.count.kafedr.js"/>
   
   <div class = 'col-10 offset-md-1 '>
-    <div class = 'h2 text-center'>Сводные данные по количеству запланированных курсов</div>
+    <div class = 'h2 text-center'>Сводный отчет по количеству запланированных курсов</div>
   </div>
   <div class = 'col-10 offset-md-1 mb-3 shadow'>
     <div id="piechart" style="width: 900px; height: 400px;">
