--- a/components/content/reports/report-plan-kpk/report-plan-kpk.html
+++ b/components/content/reports/report-plan-kpk/report-plan-kpk.html
@@ -1,6 +1,6 @@
 <div class = "row">
   <div class = 'col-10 offset-md-1 px-0'>
-    <div class = 'h1'>Календарный план</div>
+    <div class = 'h2'>КАЛЕНДАРНЫЙ ПЛАН</div>
     <div>{{отчет}}</div>
   </div>
 </div>
