--- a/components/school/header/mainMenu/mainMenu.html
+++ b/components/school/header/mainMenu/mainMenu.html
@@ -1,10 +1,19 @@
 <ul class="navbar-nav mr-auto" >
-    <li class="nav-item dropdown" >
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            От УНОИ
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-           <a class="dropdown-item" href="/unoi/sch/отчеты/календарный-план">Календарный план</a>
-        </div>
-    </li>
+  <li class="nav-item dropdown" >
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Отчеты по кадрам
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <a class="dropdown-item" href="/unoi/sch/отчеты/учителя-кпк">Сроки ПК</a>
+         <a class="dropdown-item" href="/unoi/sch/отчеты/учителя-категории">Сроки категорий</a>
+      </div>
+  </li>
+  <li class="nav-item dropdown" >
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          От УНОИ
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <a class="dropdown-item" href="/unoi/sch/отчеты/календарный-план">Календарный план</a>
+      </div>
+  </li>
 </ul>
