--- a/components/school/reports/teachers/teachers.html
+++ b/components/school/reports/teachers/teachers.html
@@ -1,8 +1,11 @@
 <div class = "row">
 
-  <div class = 'col-10 offset-md-1 '>
-    <div class = 'h2 text-center'>Сводный отчет по категориям и ПК</div>
+  <div class = 'col-12'>
+    <div class = 'h2 text-center'>Сроки прохождения ПК</div>
   </div>
-  <div class = 'col-10 offset-md-1 px-0'>{{отчет}}</div>
+  <div class = 'col-4 col-offset-8'>
+    <button type="button" class="btn btn-success">Отправить заявку</button>
+  </div>
+  <div class = 'col-12'>{{отчет}}</div>
   
 </div>
