формирование заказа на курсы

--- a/components/school/reports/teachers/teachers.html
+++ b/components/school/reports/teachers/teachers.html
@@ -3,8 +3,9 @@
   <div class = 'col-12'>
     <div class = 'h2 text-center'>Сроки прохождения ПК</div>
   </div>
-  <div class = 'col-4 col-offset-8'>
-    <button type="button" class="btn btn-success">Отправить заявку</button>
+  <div class = 'col-12'>
+    <form id = "teacher" name = "teacher"></form>
+    <button form = "teacher" class="btn btn-success" type="submit" formmethod="POST" formaction="/unoi/sch/отчеты/заявка">Сформировать заявку</button>
   </div>
   <div class = 'col-12'>{{отчет}}</div>
   
