перевод на внутреннее api

--- a/components/school/reports/order-kpk/order-kpk.html
+++ b/components/school/reports/order-kpk/order-kpk.html
@@ -1,11 +1,8 @@
 <div class = "row">
-
-  <div class = 'col-12'>
-    <div class = 'h2 text-center'>Формирование заявки на ПК</div>
-  </div>
   
   <div class = "col-1"></div>
   <div class = 'col-11'>
+    <div class = 'h2'>Формирование заявки на ПК</div>
     <button type="button" class="btn btn-success">Отправить заявку</button>
   </div>
   
