--- a/components/header/mainMenu/mainMenu.html
+++ b/components/header/mainMenu/mainMenu.html
@@ -16,6 +16,7 @@
            <a class="dropdown-item" href="/unoi/u/отчеты/календарный-план">Календарный план</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-курсы">Сводный по количеству</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/сводная">Курсы по кафедрам</a>
+           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь">Календарь сотрудников</a>
         </div>
     </li>
 </ul>
