отчет-календарь добавлен в меню начальнаяи и конечная даты передаются в api

--- a/components/header/mainMenu/mainMenu.html
+++ b/components/header/mainMenu/mainMenu.html
@@ -17,6 +17,7 @@
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-курсы">Сводный по количеству</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/сводная">Курсы по кафедрам</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь">Календарь сотрудников</a>
+           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь-сотрудники">Календарь сотрудников 2</a>
         </div>
     </li>
 </ul>
