--- a/components/header/mainMenu/mainMenu.html
+++ b/components/header/mainMenu/mainMenu.html
@@ -18,6 +18,7 @@
            <a class="dropdown-item" href="/unoi/u/отчеты/сводная">Курсы по кафедрам</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь">Календарь сотрудников</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь-сотрудники">Календарь сотрудников 2</a>
+           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-статистика-занятость">Статистика занятости сотрудников</a>
         </div>
     </li>
 </ul>
