--- a/components/content/reports/report-statistic1/report-statistic1.html
+++ b/components/content/reports/report-statistic1/report-statistic1.html
@@ -1,7 +1,7 @@
 <div class = "row">
   
   <div class = 'col-12'>
-    <div class = 'h2 text-center'>Сводный календарь мероприятий по кафедре управления образованием</div>
+    <div class = 'h2 text-center'>Занятость преподавателей по кафедре управления образованием</div>
   </div>
   <div class = 'col-12'>
     <form action = '' class = 'my-2'>
