добавлена диаграмма на сводку по курсам

--- a/components/content/reports/report-courses/report-courses.html
+++ b/components/content/reports/report-courses/report-courses.html
@@ -8,12 +8,19 @@
     <div class = 'h2 text-center'>Запланированные и реализованные курсы</div>
   </div>
   <div class = 'col-10 offset-md-1 mb-3 shadow'>
-    <div id="piechart" style="width: 900px; height: 400px;">
+    <div class = 'text-center'><h4>Фактическая выручка по кафедрам</h4></div>
+    <div id="revenue" style="width: 900px; height: 400px;">
       <p><i>идет загрузка диаграммы ...</i></p>
       <div class="preloader"></div>
     </div>
   </div>
-  
+  <div class = 'col-10 offset-md-1 mb-3 shadow'>
+    <div class = 'text-center'><h4>Количество запланированных мероприятий</h4></div>
+    <div id="count" style="width: 900px; height: 400px;">
+      <p><i>идет загрузка диаграммы ...</i></p>
+      <div class="preloader"></div>
+    </div>
+  </div>
   
   <div class = 'col-10 offset-md-1 px-0'>{{отчет}}</div>
   
