--- a/components/header/mainMenu/mainMenu.html
+++ b/components/header/mainMenu/mainMenu.html
@@ -10,14 +10,20 @@
     </li>
     <li class="nav-item dropdown" >
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Отчеты
+            Курсы
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            <a class="dropdown-item" href="/unoi/u/отчеты/календарный-план">Календарный план</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-курсы">Сводный по количеству</a>
-           <a class="dropdown-item" href="/unoi/u/отчеты/сводная">Курсы по кафедрам</a>
-           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь">Календарь сотрудников</a>
-           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь-сотрудники">Календарь сотрудников 2</a>
+        </div>
+    </li>
+    <li class="nav-item dropdown" >
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Сотрудники
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь">Календарь по сотрудникам</a>
+           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь-сотрудники">Календарь по датам</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-статистика-занятость">Статистика занятости сотрудников</a>
         </div>
     </li>
