--- a/components/content/reports/report-calendar-employee/report-calendar-employee.html
+++ b/components/content/reports/report-calendar-employee/report-calendar-employee.html
@@ -1,12 +1,13 @@
 <div class = "row">
   
   <div class = 'col-12'>
-    <div class = 'h2 text-center'>Сводный календарь мероприятий по кафедре управления образованием</div>
+    <div class = 'h2 text-center'>Сводный календарь мероприятий по кафедре {{кафедра}}</div>
   </div>
   <div class = 'col-12'>
     <form action = '' class = 'my-2'>
         <input type = 'date' name = 'начальнаяДата' value = "{{начальнаяДата}}"/>
         <input type = 'date' name = 'конечнаяДата' value = "{{конечнаяДата}}"/>
+        {{кафедры}}
         <input type = 'submit' value = 'Сформировать отчет'/>
       </form>
   </div>
