подсчет количества мероприятия и отчет с часами вернул в меню

--- a/components/header/mainMenu/mainMenu.html
+++ b/components/header/mainMenu/mainMenu.html
@@ -24,6 +24,9 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь-сотрудники">Календарь по датам</a>
+           
+           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь">Календарь по сотрудникам</a>
+           <a class="dropdown-item" href="/unoi/u/отчеты/отчет-статистика-занятость">Статистика занятости сотрудников</a>
           
         </div>
     </li>
