выбор кафедры в форме статистики отработанных часов по сотрудникам

--- a/components/content/reports/report-statistic/report-statistic.html
+++ b/components/content/reports/report-statistic/report-statistic.html
@@ -7,6 +7,7 @@
     <form action = '' class = 'my-2'>
         <input type = 'date' name = 'начальнаяДата' value = "{{начальнаяДата}}"/>
         <input type = 'date' name = 'конечнаяДата' value = "{{конечнаяДата}}"/>
+        {{кафедры}}
         <input type = 'submit' value = 'Сформировать отчет'/>
       </form>
   </div>
