установлены шрифты в форме для печати КУГа

--- a/components/content/reports/report-plan-kpk-print/report-plan-kpk-print.html
+++ b/components/content/reports/report-plan-kpk-print/report-plan-kpk-print.html
@@ -3,4 +3,22 @@
     <div class = 'h2'>КАЛЕНДАРНЫЙ ПЛАН</div>
     <div>{{отчет}}</div>
   </div>
+  <style type="text/css">
+   .table { 
+      font-size: 12pt;
+      font-family: "Times New Roman", Times, serif; 
+     }
+   .h2, h3, h5{
+     font-family: "Times New Roman", Times, serif; 
+   }
+   @media print {
+     .table { 
+        font-size: 12pt;
+        font-family: "Times New Roman", Times, serif; 
+       }
+     .h2, h3, h5{
+       font-family: "Times New Roman", Times, serif; 
+     }
+   }
+  </style>
 </div>
