--- a/components/content/reports/report-plan-kpk/report-plan-kpk.html
+++ b/components/content/reports/report-plan-kpk/report-plan-kpk.html
@@ -1,8 +1,7 @@
 <div class = "row">
   <div class = 'col-10 offset-md-1 px-0'>
     <div class = 'h2'>КАЛЕНДАРНЫЙ ПЛАН</div>
-    <div><a href="/unoi/u/отчеты/календарный-план-печать/печать">печатная версия КУГа</a></div>
+    <div><a href="/unoi/p/отчеты/календарный-план?output=print">печатная версия КУГа</a></div>
     <div>{{отчет}}</div>
   </div>
-  
 </div>
