--- a/components/header/mainMenu/mainMenu.html
+++ b/components/header/mainMenu/mainMenu.html
@@ -15,6 +15,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            <a class="dropdown-item" href="/unoi/u/отчеты/календарный-план">Календарный план</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-курсы">Сводный по количеству</a>
+           <a class="dropdown-item" href="/unoi/u/отчеты/список-курсов">Список курсов</a>
         </div>
     </li>
     <li class="nav-item dropdown" >
