добавлен отчет списка сотрудников

--- a/components/header/mainMenu/mainMenu.html
+++ b/components/header/mainMenu/mainMenu.html
@@ -24,6 +24,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
            
+           <a class="dropdown-item" href="/unoi/u/отчеты/список-сотрудников">Список сотрудников</a>
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь-сотрудники">Календарь по датам</a>
            
            <a class="dropdown-item" href="/unoi/u/отчеты/отчет-календарь">Календарь по сотрудникам</a>
